@@ -229,8 +229,8 @@ verilog/parser_bugs.v:236: PORT  'arrayAndRange'
 verilog/parser_bugs.v:237: SIGNAL_DECL  'output' 'arrayAndArrayAndRange' '[7:0]' '[2:0][1:0]' '' ''
 verilog/parser_bugs.v:237: SIGNAL_DECL  'logic' 'arrayAndArrayAndRange' '[7:0]' '[2:0][1:0]' '' ''
 verilog/parser_bugs.v:237: PORT  'arrayAndArrayAndRange'
-verilog/parser_bugs.v:238: SIGNAL_DECL  'output' 'novec2' '' '' '' ''
-verilog/parser_bugs.v:238: SIGNAL_DECL  'logic' 'novec2' '' '' '' ''
+verilog/parser_bugs.v:238: SIGNAL_DECL  'output' 'novec2' '' '' 'signed' ''
+verilog/parser_bugs.v:238: SIGNAL_DECL  'reg' 'novec2' '' '' 'signed' ''
 verilog/parser_bugs.v:238: PORT  'novec2'
 verilog/parser_bugs.v:240: ENDMODULE  'endmodule'
 verilog/pinorder.v:006: MODULE  'module' 'pinorder4' undef '0'
