@@ -235,6 +235,6 @@ module invec (
     output logic [7:0] range,
     output logic [1:0] [7:0] arrayAndRange,
     output logic [2:0] [1:0] [7:0] arrayAndArrayAndRange,
-    output logic novec2
+    output reg signed novec2
 	      );
 endmodule
